force-app/main/default/objects/WebService__c/WebService__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WebService</label>
</CustomObject>