force-app/main/default/objects/WebService__c/fields/EndPoint_Search_CECO__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Search_CECO__c</fullName>
    <label>EndPoint_Search_CECO</label>
    <type>Url</type>
</CustomField>