force-app/main/default/objects/WebService__c/fields/EndPoint_Search_Clientes__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_Search_Clientes__c</fullName>
    <label>EndPoint_Search_Clientes</label>
    <type>Url</type>
</CustomField>