force-app/main/default/objects/WebService__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>